<resources>
    <string name="app_name">Tours</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tour_search_fragment">Tour Search</string>
    <string name="have_account">Already have an account?</string>
    <string name="dont_have_account">Do not have an account?</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="last_name">Last Name</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="tour_name_search">Name</string>
    <string name="default_tour_title">Title</string>
    <string name="default_tour_description">Description</string>
    <string name="default_tour_price">Price</string>
    <string name="default_tour_opionions">0 opiniones</string>
    <string name="greeting">Welcome!</string>
    <string name="password_empty_error">Please enter a password</string>
    <string name="email_valid_error">Please enter a valid email address</string>
    <string name="password_valid_error">Password must contain at least one number, special character and uppercase and lowercase letter</string>
    <string name="country_empty_error">Please enter a country</string>
    <string name="birthday_empty_error">Please enter a birthday</string>
    <string name="name_empty_error">Please enter a name</string>
    <string name="lastname_empty_error">Please enter a last name</string>
    <string name="logout">Logout</string>
</resources>

