<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/haveAccount"
        android:layout_width="217dp"
        android:layout_height="37dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="98dp"
        android:text="@string/have_account"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        android:layout_width="344dp"
        android:layout_height="52dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColorHighlight="@color/purple_500"
        android:textColorLink="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/haveAccount" />

    <EditText
        android:id="@+id/password"
        android:layout_width="344dp"
        android:layout_height="52dp"
        android:layout_marginStart="33dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="34dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHighlight="@color/purple_500"
        android:textColorLink="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="190dp"
        android:layout_height="37dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="111dp"
        android:text="@string/forgot_password"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/login"
        android:layout_width="217dp"
        android:layout_height="59dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="97dp"
        android:enabled="false"
        android:shape="oval"
        android:text="@string/login"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgotPassword" />

    <TextView
        android:id="@+id/dontHaveAccount"
        android:layout_width="217dp"
        android:layout_height="37dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="96dp"
        android:text="@string/dont_have_account"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />

    <Button
        android:id="@+id/register"
        android:layout_width="217dp"
        android:layout_height="59dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="187dp"
        android:text="@string/register"
        android:textColor="@color/purple_500"
        android:textStyle="bold"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dontHaveAccount"
        app:strokeColor="@color/purple_500"
        app:strokeWidth="5px" />

</androidx.constraintlayout.widget.ConstraintLayout>